# kalshi-rust

./: .gitignore  LICENSE  README.md  cargo.toml
kalshi/: Cargo.toml  README.md
kalshi/src/: auth.rs  exchange.rs  kalshi_error.rs  lib.rs  market.rs  portfolio.rs  utils.rs
sample_bot/: Cargo.toml
sample_bot/src/: main.rs
scripts/: get_exchange_schedule.sh  get_exchange_status.sh  get_fills.sh  get_markets.sh  get_orders.sh  get_single_event.sh  get_single_market.sh
scripts/auth/: logout.sh
scripts/market/: get_market_history.sh  get_market_orderbook.sh  get_markets.sh  get_multiple_events.sh  get_order.sh  get_series.sh  get_single_market.sh  get_trades.sh
scripts/portfolio/: create_order.sh  delete_order.sh  get_orders.sh  get_portf_settlements.sh
test_dir/: .gitignore  Cargo.toml
test_dir/src/: main.rs
